--- a/goit-react-hw-02/package.json
+++ b/goit-react-hw-02/package.json
@@ -6,7 +6,8 @@
     "gh-pages": "^2.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "predeploy": "npm run build",
